--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,6 +1,7 @@
 <ion-content>
   <ion-header class="ion-no-border">
     <ion-toolbar>
+      <button type="submit" (click)="callwooApi()">callwo</button>
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
