--- a/src/app/pages/tutorial/tutorial.scss
+++ b/src/app/pages/tutorial/tutorial.scss
@@ -32,3 +32,12 @@ p {
     color: var(--ion-text-color, #000000);
   }
 }
+
+
+
+ion-card {
+  margin: 0 !important;
+  width: 100% !important;
+}
+
+
